<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dodger_blue"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myprofile"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_mono"
            />


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"

        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileph"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_mono"
            />
</LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:src="@drawable/profile"
            android:layout_margin="10dp"
            android:id="@+id/img"
            android:contentDescription="@string/app_name" />

    </androidx.cardview.widget.CardView>
        </LinearLayout>
</RelativeLayout>

    <RelativeLayout
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"

                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_mono"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accdes"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="right"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_mono"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"

                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disname"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_mono"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disdes"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="right"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_mono"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"

                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uppass"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_mono"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="right"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_mono"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"

                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pmi"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_mono"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pmides"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="right"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_mono"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>




    <RelativeLayout
    android:id="@+id/btnSignout"
    android:layout_width="match_parent"
    android:layout_height="50dp"

    android:layout_marginTop="30dp"


    android:layout_below="@id/card6"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:letterSpacing="0.3"
        android:text="@string/signout"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold">

    </TextView>

</RelativeLayout>

</RelativeLayout>