<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/registrationscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/reg"
        android:textSize="25dp"
        android:textStyle="bold" />
<!--    <TextView-->
<!--        android:id="@+id/fstTxt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Full Name"/>-->
<!--    <EditText-->
<!--        android:id="@+id/txtName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:ems="10"/>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/fname"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:textColorHint="@color/grey"
        app:startIconDrawable="@android:drawable/ic_menu_edit"
        app:startIconTint="#000000"
        app:hintTextColor="@color/blue"
        android:layout_below="@id/registrationscrn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationscrn"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="textPersonName" />


    </com.google.android.material.textfield.TextInputLayout>

<!--    <TextView-->
<!--        android:id="@+id/secTxt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Email"-->
<!--        android:layout_marginLeft="100dp" />-->
<!--    <EditText-->
<!--        android:id="@+id/txtEmail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:ems="10" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:textColorHint="@color/grey"
        app:startIconDrawable="@android:drawable/sym_action_email"
        app:startIconTint="#000000"
        app:hintTextColor="@color/blue"
        android:layout_below="@id/inputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>
<!--    <TextView-->
<!--        android:id="@+id/secTxt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Mobile No"-->
<!--        android:layout_marginLeft="100dp" />-->
<!--    <EditText-->
<!--        android:id="@+id/txtEmail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:inputType="phone"-->
<!--        android:ems="10" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/inputMobile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/mobile"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:textColorHint="@color/grey"
        app:startIconDrawable="@android:drawable/stat_sys_phone_call"
        app:startIconTint="#000000"
        app:hintTextColor="@color/blue"
        android:layout_below="@id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
<!--    <TextView-->
<!--        android:id="@+id/thirdTxt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Password"-->
<!--        android:layout_marginLeft="100dp" />-->
<!--    <EditText-->
<!--        android:id="@+id/txtPwd"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:inputType="textPassword"-->
<!--        android:ems="10" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPassword"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        app:hintTextColor="@color/blue"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        app:endIconTint="@color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:startIconTint="#171515"
        android:layout_below="@id/inputMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
<!--    <Button-->
<!--        android:id="@+id/btnLogin"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:text="Submit" />-->

    <RelativeLayout
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:onClick="Register"
        android:layout_below="@id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:letterSpacing="0.3"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <TextView android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginTop="40dp"
        android:text="Already Registered? Login here"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>