<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Login">

<View
    android:id="@+id/topView"
    android:layout_width="0dp"
    android:layout_height="100dp"
    android:background="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<View
    android:id="@+id/view5"
    android:layout_width="0dp"
    android:layout_height="100dp"
    android:background="@drawable/waves1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/topView" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="36dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:background="@drawable/round_border"-->
<!--        android:contentDescription="@string/top_icon"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/topView"-->
<!--        app:layout_constraintStart_toStartOf="@+id/topView"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/baseline_person_24" />-->


    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_mono"
        android:letterSpacing="0.1"
        android:text="Welcome"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:id="@+id/inputEmail"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:hint="@string/email"
    app:boxStrokeColor="@color/colorPrimary"
    app:boxStrokeWidthFocused="2dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginTop="80dp"
    app:endIconMode="clear_text"
    app:endIconTint="@color/black"
    android:textColorHint="@color/grey"
    app:startIconDrawable="@android:drawable/sym_action_email"
    app:startIconTint="#000000"
    app:hintTextColor="@color/blue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view5"

    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:inputType="textEmailAddress" />


</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/inputPassword"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:hint="@string/password"
    android:textColorHint="@color/grey"
    app:hintTextColor="@color/blue"
    app:boxStrokeColor="@color/colorPrimary"
    app:boxStrokeWidthFocused="2dp"
    app:endIconTint="@color/black"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/black"
    app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
    app:startIconTint="#171515"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inputEmail"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:inputType="textPassword" />

</com.google.android.material.textfield.TextInputLayout>
<RelativeLayout
    android:id="@+id/btnLogin"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="30dp"
    android:onClick="Login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inputPassword"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:letterSpacing="0.3"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold">

    </TextView>

</RelativeLayout>

<!--    <Button-->
<!--        android:id="@+id/btnLogin"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:backgroundTint="@color/colorPrimary"-->
<!--        android:text="@string/login"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:letterSpacing="0.3"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />-->

<TextView
    android:id="@+id/forgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32dp"
    android:text="@string/forgot_password"
    android:textColor="@color/colorPrimary"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


<TextView
    android:id="@+id/gotoRegister"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="32dp"
    android:text="@string/new_user_register_now"
    android:textColor="@color/colorPrimary"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>
